Bug 1860763. Expand workaround for d2d arcs that are full circles slightly. r=gfx-reviewers,lsalzman

The other check for (close to) full circle arcs lower down in this function

https://searchfox.org/mozilla-central/rev/01a0d864a9442d0fe2dbd4beee5c88b9b46e96bd/gfx/2d/PathD2D.cpp#221

does not catch the testcase from this bug: the start and end points are just barely far enough away.

It only makes sense that if we are changing all arcs >= 2*Pi to 1.9999*Pi that we should also change arcs between 1.9999*Pi and 2*Pi, and that fixes this bug.

I also added some instructions to the wpt canvas tests gentest.py file, which I didn't find anywhere else.

Differential Revision: https://phabricator.services.mozilla.com/D192414